Fix #1691: Remove hardcoded project version references from the Operator (#1759)
* Fix #1691: Remove hardcoded project version references from the Operator

also: added tests (using Junit Pioneer for env control)
adopted the resources-filtered directory convention suggested by https://maven.apache.org/plugins/maven-resources-plugin/examples/filter.html to make it clear which resources we want filtered and which we do not.

why: avoid stale references during the release.
Signed-off-by: Keith Wall <kwall@apache.org>